This will prevent tables that are larger than the page from overflowing and will add a scrollbar as needed

--- a/assets/css/glimesh/components/user-content-body.scss
+++ b/assets/css/glimesh/components/user-content-body.scss
@@ -2,6 +2,8 @@
 .user-content-body {
     table {
         @extend .table;
+        display: block;
+        overflow: auto;
     }
 
     img {
